--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
-
-    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.0.0/uicons-brands/css/uicons-brands.css'>
     <title>App Skeleton</title>
   </head>
   <body>
